Overflow on homepage bug fix

--- a/styles/header_footer.css
+++ b/styles/header_footer.css
@@ -201,8 +201,7 @@ li{
 /* SECTIONS */
 .content{
     position: relative;  
-    width: 100vw;
-    /*overflow-x: hidden;*/
+    width: 100%;
 }
 
 .section-title{
